--- a/2Qcache/Makefile
+++ b/2Qcache/Makefile
@@ -1,3 +1,15 @@
-.PHONY: all
-all:
-	g++ -std=c++11 -O2 -Wall -I include/ source/main.cpp -o cache
+CXX = g++
+STAND = -std=c++11
+OPTS = -O2 -Wall
+TARGET = cache
+SOURCE_PATH = source/main.cpp
+
+.PHONY: all uninstall
+
+all: $(TARGET)
+
+$(TARGET): $(SOURCE_PATH)
+	$(CXX) -o $(TARGET) $(STAND) $(OPTS) $(SOURCE_PATH) -I include/
+
+uninstall:
+	rm -rf $(TARGET)
