--- a/2Qcache/Makefile
+++ b/2Qcache/Makefile
@@ -5,17 +5,14 @@ TARGET = cache
 SOURCE_PATH = source/main.cpp
 INCLUDE_PATH = include/cache.hpp
 
-.PHONY: all uninstall
+.PHONY: all uninstall clean
 
 all: $(TARGET)
 
 main.o: $(SOURCE_PATH)
 			$(CXX) -c -o main.o $(SOURCE_PATH)
-cache.o: $(INCLUDE_PATH)
-			$(CXX) -c -o cache.o $(INCLUDE_PATH)
-
-$(TARGET): cache.o main.o
-	$(CXX) -o $(TARGET) $(STAND) $(OPTS) $(SOURCE_PATH)
+$(TARGET): main.o $(INCLUDE_PATH)
+	$(CXX) -o $(TARGET) $(STAND) $(OPTS) $(INCLUDE_PATH)
 
 clean:
 	rm -rf *.o
